# sqs-fargate-listener

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  makefile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  pypi-publish.yml  release.yml  run-tests.yml
src/sqs_fargate_listener/: __init__.py  core.py  decorator.py  health.py  logging_setup.py  testing.py  types.py
tests/: conftest.py  test_core.py  test_core_extra.py  test_decorator.py  test_health.py  test_logging.py  test_testing_helpers.py  test_types.py  test_validation.py
