[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sqs-fargate-listener"
dynamic = ["version"]
description = "Lambda-like SQS listener decorator for ECS Fargate and Python apps"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Akash", email = "akashbasa8@email.com"}
]

keywords = ["aws", "sqs", "fargate", "lambda", "listener", "queue", "decorator"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Distributed Computing",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

dependencies = [
  "boto3>=1.34.0,<2.0.0",
  "colorlog>=6.8.0,<7.0.0"
]


[project.urls]
homepage = "https://github.com/Dev-kitx/sqs-fargate-listener"
source = "https://github.com/Dev-kitx/sqs-fargate-listener"
download = "https://github.com/Dev-kitx/sqs-fargate-listener/releases"
changelog = "https://github.com/Dev-kitx/sqs-fargate-listener/blob/main/CHANGELOG.md"
releasenotes = "https://github.com/Dev-kitx/sqs-fargate-listener/releases"
documentation = "https://github.com/Dev-kitx/sqs-fargate-listener#readme"
issues = "https://github.com/Dev-kitx/sqs-fargate-listener/issues"

[tool.setuptools_scm]
# Basic config https://setuptools-scm.readthedocs.io/en/latest/
version_scheme = "only-version"
local_scheme   = "no-local-version"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.package-data]
sqs_fargate_listener = ["py.typed"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "coverage>=7.0.0",
  "mypy>=1.5.0",
  "ruff>=0.4.0",
  "boto3-stubs[sqs]>=1.34.0",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]
ignore = [
  "E501",  # line-length enforced by formatter instead
]

[tool.ruff.lint.isort]
known-first-party = ["sqs_fargate_listener"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
files = ["src"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/sqs_fargate_listener --cov-report=term-missing --cov-report=xml:coverage.xml"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/sqs_fargate_listener"]
omit = [
  "src/sqs_fargate_listener/__init__.py",
  "app.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
